@@ -1,3 +1,10 @@
+PostgreSQL 6.5               Fri Apr 23 17:40:19 EDT 1999
+=========================================================
+
+A dump/restore is required.
+
+PLACE HOLDER
+
 PostgreSQL 6.4.2             Sat Jan  2 11:04:05 EST 1999
 =========================================================
 
